rate-limiting-options-head

--- a/Form3Api.csproj
+++ b/Form3Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.7.3"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*"/>
     <PackageReference Include="Marvin.Cache.Headers" Version="3.0.0"/>
+    <PackageReference Include="AspNetCoreRateLimit" Version="2.1.0"/>
     <None Include="app.yaml" CopyToOutputDirectory="Always"/>
   </ItemGroup>
 </Project>
