--- a/Form3Api.csproj
+++ b/Form3Api.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="*"/>
     <PackageReference Include="Marvin.Cache.Headers" Version="3.0.0"/>
     <PackageReference Include="AspNetCoreRateLimit" Version="2.1.0"/>
+    <PackageReference Include="AutoMapper" Version="8.0.0"/>
     <None Include="app.yaml" CopyToOutputDirectory="Always"/>
   </ItemGroup>
 </Project>
